Fix forgotten target-hunt occurences

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "target-hunt-backend",
+  "name": "cause-connect-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
