feature/password-reset-emails
* setup email + use it in password reset routes

* Fix forgotten target-hunt occurences

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
+# JWT
 JWT_SECRET=secret
+
+# db
 DB_HOST=db-container-or-address
 DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=db-password
-DB_DATABASE=target_hunt_db 
+DB_DATABASE=cause_connect_db 
+
+# mail
+MAIL_HOST=smtp.example.com
+MAIL_USER=user@example.com
+MAIL_PASSWORD=topsecret
+MAIL_FROM=noreply@example.com
