--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ MAIL_HOST=smtp.example.com
 MAIL_USER=user@example.com
 MAIL_PASSWORD=topsecret
 MAIL_FROM=noreply@example.com
+
+# super admin
+MAGIC_PASSWORD=password
