setup/azure-blob-storage

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,7 @@ MAIL_FROM=noreply@example.com
 
 # super admin
 MAGIC_PASSWORD=password
+
+# azure
+AZURE_CONNEXION_STRING=azure-connection-string
+AZURE_CONTAINER_NAME=azure-container-name
