--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     depends_on:
       - mysql
     stop_grace_period: 3s
+    restart: unless-stopped
   mysql:
     image: mysql
     environment:
@@ -16,5 +17,6 @@ services:
       - ${DB_PORT}:3306
     volumes:
       - mysql_data:/var/lib/mysql
+    restart: unless-stopped
 volumes:
   mysql_data: {}
