--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@azure/storage-blob": "^12.17.0",
+    "@langchain/community": "^0.0.40",
     "@nestjs-modules/mailer": "^1.11.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
@@ -30,8 +31,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "@types/multer": "^1.4.11",
+    "ai": "^3.0.19",
     "bcrypt": "^5.1.1",
     "handlebars": "^4.7.8",
+    "langchain": "^0.1.31",
     "mysql2": "^3.9.2",
     "nodemailer": "^6.9.13",
     "reflect-metadata": "^0.2.0",
