doc(env): add openai_api_key to .env.example

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ MAGIC_PASSWORD=password
 # azure
 AZURE_CONNEXION_STRING=azure-connection-string
 AZURE_CONTAINER_NAME=azure-container-name
+
+# open api
+OPENAI_API_KEY=your-openai-api-key
