--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ AZURE_CONTAINER_NAME=azure-container-name
 
 # open api
 OPENAI_API_KEY=your-openai-api-key
+
+# stripe
+STRIPE_SECRET=your-stripe-secret
