prod(env): use env variable for frontend url

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,9 @@ DB_USERNAME=root
 DB_PASSWORD=db-password
 DB_DATABASE=cause_connect_db 
 
+# frontend
+WEBAPP_URL=frontend-url:port
+
 # mail
 MAIL_HOST=smtp.example.com
 MAIL_USER=user@example.com
